Central Square Size Slider

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <label for="canvas-size-slider">Canvas Size:</label>
     <input type="range" id="canvas-size-slider" min="320" max="800" value="320">
 
+    <label for="square-size-slider">Central Square Size:</label>
+    <input type="range" id="square-size-slider" min="1" max="9" step="2" value="5">
+
     <label for="node-slider">Number of Nodes:</label>
     <input type="range" id="node-slider" min="3" max="10" value="4">
 
