--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     <label for="canvas-size-slider">Canvas Size:</label>
     <input type="range" id="canvas-size-slider" min="320" max="800" value="320">
 
+    <label for="grid-shape-dropdown">Grid Shape:</label>
+    <select id="grid-shape-dropdown">
+      <option value="square">Square</option>
+      <option value="triangle">Triangle</option>
+    </select>
+    
     <label for="square-size-slider">Central Square Size:</label>
     <input type="range" id="square-size-slider" min="1" max="9" step="2" value="5">
 
