--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
     <!-- Symmetry Mode -->
     <label for="symmetry-dropdown">Symmetry Mode:</label>
     <select id="symmetry-dropdown">
-      <option value="none">None</option>
-      <option value="reflection_only">Reflection Only</option>
-      <option value="rotation">Rotation (6-fold)</option>
-      <option value="rotation_reflection" selected>Rotation + Reflection</option>
-      <!-- If you have more advanced modes, add them here -->
+      <option value="rotation3">3-fold Rotation</option>
+      <option value="rotation_reflection3">3-fold Rotation + Reflection</option>
+      <option value="rotation6" selected>6-fold Rotation</option>
+      <option value="rotation_reflection6">6-fold Rotation + Reflection</option>
     </select>
 
     <!-- Line Color -->
