--- a/raumharmonik_generator/index.html
+++ b/raumharmonik_generator/index.html
@@ -32,6 +32,7 @@
       <label for="grid-density">Punktdichte:</label>
       <input type="number" id="grid-density" min="1" max="12" step="1" value="1" title="1 = nur Eckpunkte, 2 = plus Mittelpunkt">
       <label class="checkbox-inline"><input type="checkbox" id="toggle-points" checked> Punkte</label>
+      <label class="checkbox-inline"><input type="checkbox" id="toggle-lines" checked> Linien</label>
     </div>
 
     <div class="control-row">
@@ -110,7 +111,7 @@
     </div>
 
     <div class="control-row">
-      <span id="face-count">Flächen: 0</span>
+      <span id="face-count">Flächen: 0 | Volumen: 0</span>
     </div>
   </div>
 
