--- a/raumharmonik_generator/index.html
+++ b/raumharmonik_generator/index.html
@@ -24,6 +24,7 @@
       <button id="undo-button">Undo</button>
       <button id="redo-button">Redo</button>
       <button id="random-form-button">Zufallsform</button>
+      <button id="complete-shapes-button">Flächen/Volumen schließen</button>
       <label for="preset-select">Preset:</label>
       <select id="preset-select"></select>
     </div>
