--- a/raumharmonik_generator/index.html
+++ b/raumharmonik_generator/index.html
@@ -34,6 +34,7 @@
       <input type="number" id="grid-density" min="1" max="12" step="1" value="1" title="1 = nur Eckpunkte, 2 = plus Mittelpunkt">
       <label class="checkbox-inline"><input type="checkbox" id="toggle-points" checked> Punkte</label>
       <label class="checkbox-inline"><input type="checkbox" id="toggle-lines" checked> Linien</label>
+      <label class="checkbox-inline"><input type="checkbox" id="toggle-curved-lines"> Kurven</label>
     </div>
 
     <div class="control-row">
