--- a/index.html
+++ b/index.html
@@ -2,76 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- Important for mobile scaling -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pattern Generator</title>
-
-  <!-- p5.js (you can change version if you like) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
-
-  <!-- Link to your external stylesheet (if you have one) -->
-  <link rel="stylesheet" href="style.css" />
+  <title>World of Forms Generator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="main-container">
+    <div class="controls-container">
+      <h1>World of Forms</h1>
+      
+      <div class="control-group">
+        <label for="shape-dropdown">Shape</label>
+        <select id="shape-dropdown">
+          <option value="triangle">Triangle</option>
+          <option value="square">Square</option>
+          <option value="hex" selected>Hexagon</option>
+        </select>
+      </div>
 
-  <!-- Container for the p5 canvas -->
-  <div id="canvas-container"></div>
+      <div class="control-group">
+        <label for="canvas-size-slider">Canvas Size</label>
+        <input type="range" id="canvas-size-slider" min="200" max="800" value="320">
+      </div>
 
-  <!-- Controls below the canvas -->
-  <div id="controls">
+      <div class="control-group">
+        <label for="square-size-slider">Shape Size</label>
+        <input type="range" id="square-size-slider" min="1" max="9" value="5" step="2">
+      </div>
 
-    <!-- Canvas size slider -->
-    <label for="canvas-size-slider">Canvas Size:</label>
-    <input type="range" id="canvas-size-slider" min="320" max="800" value="320">
+      <div class="control-group">
+        <label for="node-slider">Node Count</label>
+        <input type="range" id="node-slider" min="1" max="7" value="4">
+      </div>
 
-    <!-- Grid shape (square or triangle) -->
-    <label for="grid-shape-dropdown">Grid Shape:</label>
-    <select id="grid-shape-dropdown">
-      <option value="square">Square</option>
-      <option value="triangle">Triangle</option>
-      <!-- if later you add "hex", you can do:
-      <option value="hex">Hex</option>
-      -->
-    </select>
-    
-    <!-- Central Shape Size factor (1..9) -->
-    <label for="square-size-slider">Central Shape Size:</label>
-    <input type="range" id="square-size-slider" min="1" max="9" step="2" value="5">
+      <div class="control-group">
+        <label for="curve-slider">Curve Amount</label>
+        <input type="range" id="curve-slider" min="-50" max="50" value="0">
+      </div>
 
-    <!-- Number of Nodes (1..10 for example) -->
-    <label for="node-slider">Number of Nodes:</label>
-    <input type="range" id="node-slider" min="1" max="10" value="1" step="1">
+      <div class="control-group">
+        <label for="symmetry-dropdown">Symmetry</label>
+        <select id="symmetry-dropdown">
+          <option value="none">None</option>
+          <option value="reflection_only">Reflection</option>
+          <option value="rotation3">3-fold Rotation</option>
+          <option value="rotation6">6-fold Rotation</option>
+          <option value="rotation_reflection3">3-fold + Reflection</option>
+          <option value="rotation_reflection6" selected>6-fold + Reflection</option>
+        </select>
+      </div>
 
-    <!-- Curve Strength (-50..50) -->
-    <label for="curve-slider">Curve Strength (-50 to 50):</label>
-    <input type="range" id="curve-slider" min="-50" max="50" value="0">
+      <div class="control-group">
+        <label for="line-color-picker">Line Color</label>
+        <input type="color" id="line-color-picker" value="#000000">
+      </div>
 
-    <!-- Symmetry Mode -->
-    <label for="symmetry-dropdown">Symmetry Mode:</label>
-    <select id="symmetry-dropdown">
-      <option value="rotation3">3-fold Rotation</option>
-      <option value="rotation_reflection3">3-fold Rotation + Reflection</option>
-      <option value="rotation6" selected>6-fold Rotation</option>
-      <option value="rotation_reflection6">6-fold Rotation + Reflection</option>
-    </select>
+      <div class="control-group">
+        <input type="checkbox" id="toggle-nodes" checked>
+        <label for="toggle-nodes">Show Nodes</label>
+      </div>
 
-    <!-- Line Color -->
-    <label for="line-color-picker">Line Color:</label>
-    <input type="color" id="line-color-picker" value="#000000">
+      <div class="button-group">
+        <button id="clear-button">Clear</button>
+        <button id="back-button">Undo</button>
+        <button id="random-button">Random</button>
+      </div>
 
-    <!-- Show Nodes Checkbox -->
-    <label for="toggle-nodes">Show Nodes:</label>
-    <input type="checkbox" id="toggle-nodes" checked>
-
-    <!-- Buttons -->
-    <button id="clear-button">Clear</button>
-    <button id="back-button">Undo</button>
-    <button id="random-button">+ Random Line</button>
-
+    </div>
+    <div id="canvas-container"></div>
   </div>
 
-  <!-- Main sketch code -->
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+  <script src="forms.js"></script>
   <script src="sketch.js"></script>
-
 </body>
 </html>
